<resources>
    <string name="app_name">Speed Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_course_label">Món chính</string>
    <string name="side_dishes_label">Món phụ</string>
    <string name="dessert_label">Tráng miệng</string>
    <string name="beverages_label">Đồ uống</string>
    <string name="deltail_order_label">Giỏ hàng</string>
    <string name="profile_label">Thông tin</string>
</resources>